Added URL and API keys for the two API's being used, and built out some basic GUI functionality to show the utility

--- a/utd_cs2336/optional_project/build.xml
+++ b/utd_cs2336/optional_project/build.xml
@@ -1,21 +1,19 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project name="MyGsonProject" default="dist" basedir=".">
+<project name="Weather" default="compile" basedir=".">
     <!-- Define directories -->
     <property name="src.dir" value="src"/>
     <property name="lib.dir" value="lib"/>
     <property name="build.dir" value="build"/>
-    <property name="dist.dir" value="dist"/>
     <property name="main-class" value="Weather"/> 
 
-    <!-- Classpath for compilation -->
+    <!-- Classpath for compilation and runtime -->
     <path id="project.classpath">
         <fileset dir="${lib.dir}" includes="*.jar"/>
+        <pathelement path="${build.dir}"/>
     </path>
 
     <!-- Initialize directories -->
     <target name="init">
         <mkdir dir="${build.dir}"/>
-        <mkdir dir="${dist.dir}"/>
     </target>
 
     <!-- Compile Java files -->
@@ -25,25 +23,15 @@
         </javac>
     </target>
 
-    <!-- Create JAR file -->
-    <target name="dist" depends="compile">
-        <jar destfile="${dist.dir}/${ant.project.name}.jar" basedir="${build.dir}">
-            <manifest>
-                <attribute name="Main-Class" value="${main-class}"/>
-            </manifest>
-            <!-- Include Gson in the JAR (optional, if you want a fat JAR) -->
-            <zipfileset src="${lib.dir}/gson-2.6.2.jar" excludes="META-INF/*.SF, META-INF/*.DSA, META-INF/*.RSA"/>
-        </jar>
-    </target>
-
     <!-- Clean build directories -->
     <target name="clean">
         <delete dir="${build.dir}"/>
-        <delete dir="${dist.dir}"/>
     </target>
 
     <!-- Run the program -->
-    <target name="run" depends="dist">
-        <java jar="${dist.dir}/${ant.project.name}.jar" fork="true"/>
+    <target name="run" depends="compile">
+        <java classname="${main-class}" fork="true">
+            <classpath refid="project.classpath"/>
+        </java>
     </target>
 </project>
