Modified the build file to properly compile and run the app. Changed the WeatherGUI to only show one OptionPane that shows the weather results

--- a/utd_cs2336/optional_project/build.xml
+++ b/utd_cs2336/optional_project/build.xml
@@ -3,7 +3,7 @@
     <property name="src.dir" value="src"/>
     <property name="lib.dir" value="lib"/>
     <property name="build.dir" value="build"/>
-    <property name="main-class" value="Weather"/> 
+    <property name="main-class" value="WeatherGUI"/> 
 
     <!-- Classpath for compilation and runtime -->
     <path id="project.classpath">
